# deusmagi-toolkit

./: .gitignore  CMakeLists.txt  binreloc.c  binreloc.h  bresenham.h  clioptions.c  clioptions.h  cmake.h.def  colorspace.c  colorspace.h  common.h  console.c  console.h  curl.c  curl.h  datetime.c  datetime.h  logger.c  logger.h  math.c  math.h  memory.c  memory.h  mempool.c  mempool.h  packet.c  packet.h  packet_dec.h  path.c  path.h  pbkdf2.h  porting.c  porting.h  process.c  process.h  shstr.c  shstr.h  signals.c  signals.h  socket.c  (+14 more)
